SKI-221 - work on per-user backup.  Major refactor to activity and user table structures.  added email gsi on user table.  changed hash / range keys on activity table.  in progress.